Fix proxy: force IPv4 and internal localhost
- Use 127.0.0.1 with family:4 to avoid IPv6 ECONNREFUSED
- Proxy to internal gateway and inject auto-reconnect script
- /better-gateway/ now serves enhanced gateway UI directly
- /better-gateway/help for installation instructions
- /better-gateway/inject.js for standalone script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp src/inject.js dist/inject.js",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "test": "vitest run",
